# PTTT

./: .redocly.yaml  README.md
generator_templates/: templates_readme.md
generator_templates/python-fastapi/: api.mustache
templates/: TEMPLATES.md
templates/code_generation/python-fastapi/: README.mustache  api.mustache  base_api.mustache
templates/generators/python-fastapi/: pyproject_toml.mustache
templates/protocol_template/: cookiecutter.json
templates/protocol_template/hooks/: post_gen_project.py
templates/protocol_template/{{ cookiecutter.output_dir  }}/: README.md  openapi.yml
uws/: NOTES.md  UWS.md  openapi.yml
uws/configs/: fastapi_config.yml  python-fastapi.yml
uws/fastapi/: README.md  openapi.yaml  requirements.txt  setup.cfg
uws/fastapi/.openapi-generator/: FILES
uws/fastapi/src/openapi_server/: main.py
uws/fastapi/src/openapi_server/apis/: default_api.py  default_api_base.py  foo.txt  route_order
uws/fastapi/src/openapi_server/cache/: uws_cache.py
uws/fastapi/src/openapi_server/models/: api_base_model.py  error_responses.py  error_summary.py  execution_phase.py  job.py  job_summary.py  jobs.py  parameter.py  parameters.py  post_create_job_request.py  post_update_job_destruction_request.py  post_update_job_execution_duration_request.py  post_update_job_parameters_request.py  post_update_job_phase_request.py  post_update_job_request.py  result_reference.py  results.py  short_job_description.py  uws_version.py
uws/fastapi/tests/: test_default_api.py
vosi/: changes.md  openapi.yml
(+2 files in other folders)
