[metadata]
name = openapi_server
version = 1.2
description = The Universal Worker Service (UWS) pattern defines how to manage asynchronous execution of jobs on a service.
long_description = file: README.md
keywords = OpenAPI Universal Worker Service (UWS)
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
